	- To open a map you need to extract .MPD and the corresponding .MPP
	- You can open .GEO files
	- You can export a map as GLTF (you then import it in Blender)
		- Map textures are not exported correctly as they use multiple overlapping channels
		
===  2.05.2020 - v0.8.7 ===
  * Sprite Sheet Editor v0.4.4 alpha:
	- You now can scale external sprite sheets
		- You need to define the original sprite size as it is not stored 
		- If "Resize Sprites" is checked then all sprites will also be scaled including animations
	- Fixed some initializing bugs with "Sprite sheet settings" dialog
	- New feature: If you scale via Drag and Drop, you can now hold Shift to scale proportionally

===  9.05.2020 - v0.8.8 ===
  * Sprite Sheet Editor v0.4.5 alpha:
	- Reworked "sprite sheet view" navigation
		- It now uses a Flickable instead of an ScrollArea
		- You can move the view via holding right mouse button, like in 3D view
		- You can zoom via mouse wheel, like in 3D view. Also zoom has far bigger range
		- Made resize handle easier to select (it will also become bigger on zoom in)
		- Selected cutouts now have interaction priority 
		- Improved undo on resize
	- Fixed rendering bug when adding or removing sprite sheets
  * Disa Map Viewer v0.0.3 alpha:
	- Improved model interpretation

===  10.05.2020 - v0.8.9 ===
  * Disa Map Viewer v0.0.4 alpha:
	- Added basic animation support
	- Added billboard support
        - Background is now dark
		
===  28.05.2020 - v0.9.0 ===
  * Disa Map Viewer v0.0.6 alpha:
	- Animations are now almost the same as in game
	- Added animated texture support
		- Note: Texture scroll speed and direction is defined inside map files, so if you just open a model the animation will be wrong
	- You can now open DATA.DAT to view all maps inside
	- Added interpretation for models that are marked hidden
		- You can display hidden models via a toggle button
  * Sprite Sheet Editor v0.4.6 alpha
	- Fixed crash when sprite id is set too high